fix: add typescript & tsconfig

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "rimraf": "^3.0.1",
     "rollup": "^1.31.0",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-uglify": "^6.0.4"
+    "rollup-plugin-uglify": "^6.0.4",
+    "typescript": "^3.7.5"
   },
   "husky": {
     "hooks": {
