--- a/package.json
+++ b/package.json
@@ -8,36 +8,15 @@
     "build:ts": "tsc",
     "build": "rimraf dist/* && npm run build:ts && npm run prettier"
   },
-  "author": "",
+  "author": "lianer",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-typescript": "^7.8.3",
-    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@types/node": "^13.9.1",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
-    "husky": "^4.2.1",
-    "lint-staged": "^10.0.7",
-    "lodash.merge": "^4.6.2",
-    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.1",
-    "rollup": "^1.31.0",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-uglify": "^6.0.4",
     "typescript": "^3.7.5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*./src/**/*.{js,ts,json,css,less,md}": [
-      "prettier --write",
-      "yarn lint"
-    ]
   }
 }
