--- a/package.json
+++ b/package.json
@@ -3,24 +3,8 @@
   "version": "1.0.0",
   "description": "leetcode-do-it",
   "scripts": {
-    "lint": "eslint 'src/**/*.{js,ts}'",
-    "prettier": "prettier dist/**/* --write",
-    "build:ts": "tsc",
-    "build": "rimraf dist/* && npm run build:ts && npm run prettier"
+    "test": "echo 1"
   },
   "author": "lianer",
-  "license": "ISC",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.1",
-    "typescript": "^3.7.5"
-  },
-  "dependencies": {
-    "@types/node": "^13.9.3",
-    "@types/power-assert": "^1.5.3",
-    "power-assert": "^1.6.1"
-  }
+  "license": "ISC"
 }
